--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
             <div class="header-text">
                 <h1>Vone</h1>
                 <h2>Unleash your PC's full performance</h2>
-                <a href="http://cdn.hydragotcash.us.to/projects/Vone.4.0.Stable.Win64.zip" class="download-btn">
+                <a href="http://getvone.us.to/cdn/Vone.4.1.Stable.rar" class="download-btn">
                     <img src="download.png" alt="Download Icon">
                     Download Latest Version
                 </a>
