--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Vone - PC Optimizer</title>
+    
+    <link rel="icon" href="icon.ico" type="image/x-icon">
+
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
     <style>
         * {
@@ -17,7 +20,7 @@
             background-color: #1c1c1e;
             color: #fff;
             font-family: 'Poppins', sans-serif;
-            overflow: hidden; /* Prevent scrolling during the animation */
+            overflow: hidden;
         }
 		
 		.startup-screen {
@@ -32,7 +35,7 @@
 		backdrop-filter: blur(10px);
 		opacity: 1;
 		transition: opacity 1s ease;
-		z-index: 9999; /* Keep it above everything else */
+		z-index: 9999;
 		}
 	
         .startup-screen img {
@@ -42,7 +45,7 @@
         .container {
             width: 90%;
             margin: 0 auto;
-            display: none; /* Hide main content initially */
+            display: none;
         }
 
         header {
@@ -69,7 +72,7 @@
         }
 
         .download-btn, .discord-btn {
-            background: linear-gradient(135deg, magenta, purple, #5c57ff);
+            background: linear-gradient(135deg, #000080, #0000ff, #87CEFA);
             color: white;
             padding: 15px 30px;
             border-radius: 8px;
@@ -80,6 +83,7 @@
             gap: 10px;
             margin-top: 20px;
             transition: background-color 0.3s ease, transform 0.3s ease;
+            box-shadow: 0 4px 15px rgba(0, 0, 255, 0.6); /* Add shadow */
         }
 
         .download-btn img, .discord-btn img, .credits-btn img {
@@ -87,8 +91,11 @@
             height: 24px;
         }
 
+        /* Hover effects for tilt, highlight, and shadow intensification */
         .download-btn:hover, .discord-btn:hover, .credits-btn:hover {
-            transform: translateY(-5px);
+            transform: perspective(500px) rotateX(5deg) rotateY(5deg); /* Tilt */
+            box-shadow: 0 6px 20px rgba(0, 0, 255, 0.8), 0 0 15px rgba(135, 206, 250, 0.8); /* Enhance shadow */
+            background: linear-gradient(135deg, #0000ff, #87CEFA, #add8e6); /* Highlight */
         }
 
         .version-text {
@@ -101,7 +108,7 @@
             max-width: 45%;
             border-radius: 10px;
             padding: 5px;
-            background: linear-gradient(135deg, magenta, purple, #5c57ff);
+            background: linear-gradient(135deg, #000080, #0000ff, #87CEFA);
             transition: transform 0.3s ease;
         }
 
@@ -125,12 +132,12 @@
             border: 3px solid transparent;
             background-clip: padding-box, border-box;
             background-origin: border-box;
-            box-shadow: 0 0 0 3px linear-gradient(135deg, magenta, purple, #5c57ff);
+            box-shadow: 0 0 0 3px linear-gradient(135deg, #000080, #0000ff, #87CEFA);
         }
 
         .feature:hover {
             transform: translateY(-10px) rotate(1deg);
-            box-shadow: 0 0 15px rgba(255, 0, 255, 0.4), 0 0 15px rgba(0, 0, 255, 0.4);
+            box-shadow: 0 0 15px rgba(0, 0, 128, 0.4), 0 0 15px rgba(0, 0, 255, 0.4), 0 0 15px rgba(135, 206, 250, 0.4);
         }
     </style>
 </head>
@@ -175,18 +182,17 @@
     </div>
 
     <script>
-        // Function to handle the startup screen and fade effect
         window.onload = function() {
             const startupScreen = document.getElementById('startupScreen');
             const mainContent = document.getElementById('mainContent');
 
             setTimeout(() => {
-                startupScreen.style.opacity = '0'; // Fade out the startup screen
+                startupScreen.style.opacity = '0';
                 setTimeout(() => {
-                    startupScreen.style.display = 'none'; // Remove the startup screen
-                    mainContent.style.display = 'block'; // Show main content
-                }, 500); // Wait for the fade-out to complete
-            }, 1200); // Show startup screen for 1.5 seconds
+                    startupScreen.style.display = 'none';
+                    mainContent.style.display = 'block';
+                }, 500);
+            }, 1200);
         }
     </script>
 
